# seyLu

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: auto-approve-pr.yaml  auto-udpate-pre-commit.yaml  codeql.yaml  lint.yaml
backups/: README.md.v1  README.md.v2
markdown/: main.md
markdown/sections/: __header__.md  footer.md  mermaid.md  stats.md
markdown/sections/project/: __footer__.md  __header__.md  clone-templates.md  curator.md  doggo-dash.md  fiftyville.md  ghlabel.md  google-clone.md  mail.md  medrec.md  pinned-gists.md  wikipedia-clone.md
markdown/sections/project/archive/: mail.md  medrec.md
markdown/sections/reference_link/: gmail.md
markdown/sections/reference_link/projects/: deploy.md  projects.md  svg.md
markdown/sections/reference_link/technologies/: backend.md  frontend.md  other.md
markdown/sections/technologies/: backend.md  frontend.md  other.md
scripts/: mdcompile  nolinkheaders.py  readme.py  readmee
static/css/: main.min.css
templates/: index.html
