[project]
name = "seylu"
description = "github.com/seyLu"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "MJ Sabit (seyLu)", email = "98249191+seyLu@users.noreply.github.com" },
]
dynamic = ["version"]
keywords = ["seyLu", "README Profile", "Github Profile"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/seyLu/seyLu#readme"
"Homepage" = "https://github.com/seyLu/seyLu"
"Bug Tracker" = "https://github.com/seyLu/seyLu/issues"


[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "S",   # flake8-bandit
  "E",   # Pyflakes
  "F",   # Pycodestyle
  "I",   # Isort
  "PL",  # Pylint
  "RUF", # Ruff-specific rules
]
ignore = ["E501"]


[tool.mypy]
strict = true
implicit_reexport = true
check_untyped_defs = true
ignore_missing_imports = true

# Exclude type checking on files/dirs
exclude = [
  # TOML basic string (double-quotes, backslash and other characters need escaping)
  # TOML literal string (single-quotes, no escaping necessary)
]
